hphp/test/zend/bad/ext/gd/tests/imageantialias_error1.php
<?php
$image = tmpfile();

var_dump(imageantialias($image, true));
?>